# icdevs-wasmer

./: .gitignore  README.md
csharp/: CsharpWasmer.csproj  CsharpWasmer.sln  Form1.Designer.cs  Form1.cs  MoHelper.cs  Program.cs  README.md
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/debug/: AndroidManifest.xml
flutter/ios/Runner/: Info.plist
flutter/lib/: main.dart  motoko_helper.dart
flutter/test/: widget_test.dart
flutter/wasm3/: README.md  pubspec.yaml
flutter/wasm3/android/app/: build.gradle
flutter/wasm3/ios/Runner/: Info.plist
flutter/wasm3/ios/Runner.xcodeproj/: project.pbxproj
flutter/wasm3/lib/: main.dart  motoko_helper.dart
flutter/wasm3/linux/: CMakeLists.txt  my_application.cc
flutter/wasm3/macos/Runner.xcodeproj/: project.pbxproj
flutter/wasm3/macos/Runner/Configs/: AppInfo.xcconfig
flutter/wasm3/test/: widget_test.dart
flutter/wasm3/wasm3/: README.md  pubspec.yaml
flutter/wasm3/wasm3/android/: CMakeLists.txt  build.gradle  settings.gradle
flutter/wasm3/wasm3/android/src/main/: AndroidManifest.xml
flutter/wasm3/wasm3/android/src/main/kotlin/com/example/wasm3/: Wasm3Plugin.kt
flutter/wasm3/wasm3/ios/: CMakeLists.txt  wasm3.podspec
flutter/wasm3/wasm3/ios/Classes/: Wasm3Plugin.swift
flutter/wasm3/wasm3/lib/: wasm3.dart  wasm3_method_channel.dart  wasm3_platform_interface.dart
flutter/wasm3/web/: index.html  manifest.json
flutter/wasm3/windows/: CMakeLists.txt
flutter/wasm3/windows/runner/: Runner.rc  main.cpp
flutter/wasmer/: README.md
flutter/wasmer/ios/Runner.xcodeproj/: project.pbxproj
flutter/wasmer/lib/: main.dart
flutter/wasmer/linux/: CMakeLists.txt  my_application.cc
flutter/wasmer/macos/Runner.xcodeproj/: project.pbxproj
flutter/wasmer/web/: index.html  manifest.json
flutter/wasmer/windows/runner/: main.cpp
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc
motoko/: a-motoko-lib.mo  a-motoko-lib.wasm  build.sh  readme.md
nodejs/: README.md  a-motoko-lib.wasm  package-lock.json  package.json  tsconfig.json
nodejs/src/: index.ts  motoko-helper.ts
react-native/: App.tsx  README.md  a-motoko-lib.js  app.json  declares.d.ts  motoko-helper.ts  package-lock.json  package.json
react-native/android/: settings.gradle
react-native/android/app/: build.gradle
react-native/ios/: Podfile
react-native/ios/RnWasmer/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
react-native/ios/RnWasmer.xcodeproj/: project.pbxproj
react-native/ios/RnWasmer.xcworkspace/: contents.xcworkspacedata
react-native/ios/RnWasmerTests/: RnWasmerTests.m
swift/: Package.swift  README.md
swift/App/sf_ws/: ContentView.swift  motoko_helper.swift  sf_wsApp.swift
swift/App/sf_ws.xcodeproj/: project.pbxproj
swift/CWasmer/: Package.swift  README.md
swift/CWasmer/Sources/CWasmer/: CWasmer.swift  module.modulemap
swift/Sources/CWasmer/: module.modulemap
swift/Sources/sw_sw/: sw_sw.swift
(+46 files in other folders)
